<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_action_search" android:id="@id/search" android:title="@string/search" android:showAsAction="always" />
    <item android:icon="@drawable/abs__ic_menu_moreoverflow_normal_holo_dark" android:id="@id/submenu" android:showAsAction="always">
        <menu>
            <item android:id="@id/home" android:title="@string/home" />
            <item android:id="@id/addbookmark" android:title="@string/addbookmark" />
            <item android:id="@id/savePage" android:title="@string/savePage" />
            <item android:id="@id/bookmarks" android:title="@string/bookmarks" />
            <item android:id="@id/queue" android:title="@string/queue" />
            <item android:id="@id/refresh" android:title="@string/refresh" />
            <item android:id="@id/random" android:title="@string/randompage" />
            <item android:id="@id/share" android:title="@string/share" />
            <item android:id="@id/languageSwap" android:title="@string/languageSwap" />
            <item android:id="@id/upgrade" android:title="@string/upgradeToWikidroidPlus" />
            <item android:id="@id/settings" android:title="@string/settings" />
        </menu>
    </item>
</menu>